# kidde-homesafe

./: README.md  kidde_homesafe.py  pyproject.toml
